packages/tree-sitter/grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement)
    ),

    statement_block: $ => seq(
      '{',
      repeat($.statement),
      '}'
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $.statement),
      optional(seq('else', field('alternative', $.statement)))
    ),

    switch_statement: $ => seq(
      'switch',
      field('value', $.parenthesized_expression),
      field('body', $.switch_body)
    ),

    switch_body: $ => seq(
      '{',
      repeat(choice($.switch_case, $.switch_default)),
      '}'
    ),

    switch_case: $ => seq(
      'case',
      field('value', $.expression),
      ':',
      repeat($.statement)
    ),

    switch_default: $ => seq(
      'default',
      ':',
      repeat($.statement)
    ),

    for_of_statement: $ => seq(
      'for',
      optional('await'),
      '(',
      choice(
        seq(choice('let', 'const', 'var'), choice($._destructuring_pattern, $.identifier)),
        $.identifier
      ),
      'of',
      field('right', $.expression),
      optional(seq(';', 'index', $.identifier)),
      optional(seq(';', 'key', $.expression)),
      ')',
      field('body', $.statement)
    ),

    try_statement: $ => seq(
      'try',
      field('body', $.statement_block),
      optional(field('handler', $.catch_clause)),
      optional(field('finalizer', $.finally_clause))
    ),

    catch_clause: $ => seq(
      'catch',
      optional(seq('(', field('parameter', choice($.identifier, $._destructuring_pattern)), ')')),
      field('body', $.statement_block)
    ),

    break_statement: $ => seq(
      'break',
      optional($.identifier),
      $._semicolon
    ),

    component_declaration: $ => prec.left(PREC.DECLARATION, seq(
      optional('export'),
      optional('default'),
      'component',
      optional(field('name', $.identifier)),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.formal_parameters),
      optional($._type_annotation),
      field('body', $.component_body)
    )),

    component_body: $ => seq(
      '{',
      repeat($.component_statement),
      '}'
    ),

    formal_parameters: $ => seq(
      '(',
      optional(commaSep($._formal_parameter)),
      optional(','),
      ')'
    ),

    _formal_parameter: $ => choice(
      $.required_parameter,
      $.rest_parameter
    ),

    required_parameter: $ => seq(
      field('pattern', choice($.identifier, $._destructuring_pattern)),
      optional('?'),
      optional($._type_annotation),
      optional($.initializer)
    ),

    _destructuring_pattern: $ => choice(
      $.object_pattern,
      $.array_pattern
    ),

    object_pattern: $ => seq(
      '{',
      commaSep(choice(
        $.pair_pattern,
        $.rest_pattern,
        $.object_assignment_pattern,
        $.shorthand_property_identifier_pattern
      )),
      optional(','),
      '}'
    ),

    parenthesized_expression: $ => seq(
      '(',
      $.expression,
      ')'
    ),

    member_expression: $ => prec(PREC.MEMBER, seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', '?.'),
      field('property', choice($.identifier, $.private_property_identifier))
    )),

    shorthand_property_identifier_pattern: $ => alias($.identifier, $.shorthand_property_identifier),

    jsx_element: $ => seq(
      field('open_tag', $.jsx_opening_element),
      repeat(field('children', $._jsx_child)),
      field('close_tag', $.jsx_closing_element)
    ),

    jsx_opening_element: $ => seq(
      '<',
      optional('@'),
      field('name', $.jsx_element_name),
      repeat(field('attribute', $._jsx_attribute)),
      '>'
    ),

    jsx_closing_element: $ => seq(
      '</',
      optional('@'),
      field('name', $.jsx_element_name),
      '>'
    ),

    // In Ripple, namespaced TSX-compat elements like <tsx:react> cannot be self-closing
    // so we disallow jsx_namespace_name here by using a narrowed name rule.
    jsx_self_closing_element: $ => seq(
      '<',
      optional('@'),
      field('name', $.jsx_non_namespaced_element_name),
      repeat(field('attribute', $._jsx_attribute)),
      '/>'
    ),

    _jsx_attribute: $ => choice(
      $.jsx_attribute,
      $.jsx_expression
    ),

    jsx_expression: $ => seq(
      '{',
      optional(choice(
        $.expression,
        $.spread_element,
        seq('...', $.expression),
        seq('ref', choice($.identifier, $.arrow_function, $.function_expression)),
        seq('html', $.expression)
      )),
      '}'
    ),

    _jsx_child: $ => choice(
      $.jsx_text,
      $.jsx_element,
      $.jsx_self_closing_element,
      $.jsx_expression
    ),

    identifier: $ => {
      const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
      const alphanumeric = /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          token.immediate(prec(1, /[^"\\\n]+/)),
          $.escape_sequence
        )),
        '"'
      ),
      seq(
        "'",
        repeat(choice(
          token.immediate(prec(1, /[^'\\\n]+/)),
          $.escape_sequence
        )),
        "'"
      )
    ),

    _type_annotation: $ => seq(
      ':',
      $.type
    ),

    _semicolon: $ => choice($._automatic_semicolon, ';'),
  }
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
